affiliate links added, pop up added with terms of use

--- a/books.html
+++ b/books.html
@@ -65,27 +65,27 @@
     <p>This page uses affiliate links, meaning that when you make a purchase, this website will recieve a little bit of the sale at no extra cost to you. The only page that features affiliate links is this page. This money helps offset the cost of hosting and the domain names, and helps ensure you will recieve updates and more content. </p>
 
     <div class="book">
-      <img class="book-image" src="/Assets/Media/book1.jpg" alt="Book 1">
+      <a target="_blank" href="https://www.amazon.com/The-Simple-Path-to-Wealth-audiobook/dp/B0725RFDPY/ref=sr_1_1?keywords=the+simple+path+to+wealth+by+j.l.+collins&amp;sr=8-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=81344006f0b851167bce6ebde4165bee&camp=1789&creative=9325"><img class="book-image" src="/Assets/Media/book1.jpg" alt="J.L. Collins Simple Path to Wealth Cover"></a>
       <div class="book-details">
-        <h2 class="book-title">The Simple Path to Wealth</h2>
+        <h2 class="book-title"><a target="_blank" href="https://www.amazon.com/The-Simple-Path-to-Wealth-audiobook/dp/B0725RFDPY/ref=sr_1_1?keywords=the+simple+path+to+wealth+by+j.l.+collins&amp;sr=8-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=81344006f0b851167bce6ebde4165bee&camp=1789&creative=9325">The Simple Path to Wealth</a></h2>
         <p class="book-author">J.L. Collins</p>
         <p class="book-edition">Edition: June 18 2016</p>
         <p>Great first book to read, author is engaging and covers a lot of ground in this book.</p>
       </div>
     </div>
     <div class="book">
-      <img class="book-image" src="/Assets/Media/book2.jpg" alt="Book 2">
+      <a target="_blank" href="https://www.amazon.com/Automatic-Millionaire-Expanded-Updated-Powerful/dp/0451499085/ref=sr_1_1?keywords=automatic+millionaire&amp;sr=8-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=81b1ab294c55a118b14d6c7bc311a370&camp=1789&creative=9325"><img class="book-image" src="/Assets/Media/book2.jpg" alt="David Bach's Automatic Millionaire Cover"></a>
       <div class="book-details">
-        <h2 class="book-title">The Automatic Millionaire</h2>
+        <h2 class="book-title"><a target="_blank" href="https://www.amazon.com/Automatic-Millionaire-Expanded-Updated-Powerful/dp/0451499085/ref=sr_1_1?keywords=automatic+millionaire&amp;sr=8-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=81b1ab294c55a118b14d6c7bc311a370&camp=1789&creative=9325">The Automatic Millionaire</a></h2>
         <p class="book-author">David Bach</p>
         <p class="book-edition">Edition: 2016</p>
         <p>This book is great! Making everything automatic when it comes to personal finance is a wonderful idea and perhaps the only one that will work for most people. Inspires action and makes it simple. The one thing I don't like is the way he breaks down asset allocation which is too complicated for most people. Listen to the other books about asset allocation, but besides that everything is great.</p>
       </div>
     </div>
     <div class="book">
-      <img class="book-image" src="/Assets/Media/book3.jpg" alt="Book 3">
+      <a target="_blank" href="https://www.amazon.com/Retire-Before-Mom-and-Dad-audiobook/dp/B07XT6BZJS/ref=sr_1_1?keywords=retire+before+mom+and+dad&amp;sr=8-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=9c66bad35ce46881a2082627d1aa2719&camp=1789&creative=9325"><img class="book-image" src="/Assets/Media/book3.jpg" alt="Retire Befire Mom and Dad cover"></a>
       <div class="book-details">
-        <h2 class="book-title">Retire Before Mom and Dad</h2>
+        <h2 class="book-title"><a target="_blank" href="https://www.amazon.com/Retire-Before-Mom-and-Dad-audiobook/dp/B07XT6BZJS/ref=sr_1_1?keywords=retire+before+mom+and+dad&amp;sr=8-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=9c66bad35ce46881a2082627d1aa2719&camp=1789&creative=9325">Retire Before Mom and Dad</a></h2>
         <p class="book-author">Rob Berger</p>
         <p class="book-edition">Edition: 2019</p>
         <p>Great first book. But J.L. Collin's book is probably a little better as a first book. The math in this book is very informative about how small differences in savings rates can make a big difference later in life. A must read!</p>
@@ -93,17 +93,17 @@
       
     </div>
         <div class="book">
-      <img class="book-image" src="/Assets/Media/book4.jpg" alt="Book 3">
+      <a target="_blank" href="https://www.amazon.com/Little-Book-Common-Sense-Investing/dp/0470102101/ref=tmm_hrd_swatch_0?_encoding=UTF8&amp;sr=1-2&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=70b05f8efe552aa00e40279189077f9a&camp=1789&creative=9325"><img class="book-image" src="/Assets/Media/book4.jpg" alt="Jack Bogle's Little Book on Common Sense Investing cover"></a>
       <div class="book-details">
-        <h2 class="book-title">The Little Book on Common Sense Investing</h2>
+        <h2 class="book-title"><a target="_blank" href="https://www.amazon.com/Little-Book-Common-Sense-Investing/dp/0470102101/ref=tmm_hrd_swatch_0?_encoding=UTF8&amp;sr=1-2&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=70b05f8efe552aa00e40279189077f9a&camp=1789&creative=9325">The Little Book on Common Sense Investing</a></h2>
         <p class="book-author">John "Jack" Bogle</p>
         <p class="book-edition">Edition: 2017</p>
-        <p>If you aren't sold on index funds, this book provides a lot of evidence towards their merit. Great book for those skeptical about index fund investing through ETF's and mutual funds. Great book for all investors, but a little dry sometimes. Good as a second or third book. </p>
+        <p>If you aren't sold on index funds, this book provides a lot of evidence towards their merit. Great book for those skeptical about index fund investing through ETF's and mutual funds. Great book for all investors, but a little dry sometimes. Good as a second or third book. Buy used or get the digital and save.</p>
       </div></div>
     <div class="book">
-      <img class="book-image" src="/Assets/Media/book5.jpg" alt="Book 5">
+      <a target="_blank" href="https://www.amazon.com/Bogleheads-Guide-Investing-Second/dp/B07VGDSDPB/ref=sr_1_1?keywords=bogleheads+guide+to+investing&amp;s=books&amp;sr=1-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=bb3c481b29c13ee74f077f5780d35991&camp=1789&creative=9325"><img class="book-image" src="/Assets/Media/book5.jpg" alt="Boglehead's guide to investing cover"></a>
       <div class="book-details">
-        <h2 class="book-title">Bogleheads Guide to Investing</h2>
+        <h2 class="book-title"><a target="_blank" href="https://www.amazon.com/Bogleheads-Guide-Investing-Second/dp/B07VGDSDPB/ref=sr_1_1?keywords=bogleheads+guide+to+investing&amp;s=books&amp;sr=1-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=bb3c481b29c13ee74f077f5780d35991&camp=1789&creative=9325">Bogleheads Guide to Investing</h2></a>
         <p class="book-author">Tyler Larimore, Mel</p>
         <p class="book-edition">Edition: 2014</p>
         <p>Very detailed book, but a little dry. I would not reccomend as a first book, as if you do not know a about personal finance and individual types of investments, you may feel lost as many things are covered quickly.</p>
@@ -111,9 +111,9 @@
       
     </div>
         <div class="book">
-      <img class="book-image" src="/Assets/Media/book6.jpg" alt="Book 3">
+      <a target="_blank" href="https://www.amazon.com/Mortgage-Free-Innovative-Strategies-Debt-Free/dp/1603580654/ref=sr_1_2?keywords=mortgage+free&amp;s=books&amp;sr=1-2&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=9ed301ec79205510857e9320a9595dad&camp=1789&creative=9325"><img class="book-image" src="/Assets/Media/book6.jpg" alt="Mortgage Free cover"></a>
       <div class="book-details">
-        <h2 class="book-title">Mortgage Free!</h2>
+        <h2 class="book-title"><a target="_blank" href="https://www.amazon.com/Mortgage-Free-Innovative-Strategies-Debt-Free/dp/1603580654/ref=sr_1_2?keywords=mortgage+free&amp;s=books&amp;sr=1-2&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=9ed301ec79205510857e9320a9595dad&camp=1789&creative=9325">Mortgage Free!</a></h2>
         <p class="book-author">Rob Roy</p>
         <p class="book-edition">Edition: 2nd</p>
         <p>Dark horse book, reccomended for anyone. Best for the committed serious investor and is mostly a real estate book, not a traditional personal finance book. Buy a used copy on Amazon to save some bucks!</p>
