--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Freedom Project</title>
+  <title>The Freedom Savers Foundation</title>
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
 
   <style>
@@ -93,7 +93,7 @@
   <header class="navbar">
     <section class="navbar-section">
     <div class="container">
-      <a href="index.html" class="navbar-brand">The Freedom Project</a>
+      <a href="index.html" class="navbar-brand">The Freedom Savers Foundation</a>
     </section>
     <section class="navbar-section">
       <a href="https://github.com/JeffreyDinackus/JeffreyDinackus.com" class="btn btn btn-link">Contact</a>
@@ -101,7 +101,7 @@
   </header>
   
   <div class="backdrop bg-primary">
-    <h1>Welcome to the Freedom Project!</h1>
+    <h1>Welcome to the Freedom Savers Foundation!</h1>
     <p><span class="italic-text">Welcome Savers, </span>You will find calculators to help you with your finances and making informed financial decisions.</p>
   </div>
   
@@ -149,6 +149,7 @@
       <p>This is a free and open source project. View code and contribute on our github page.</p>
       <p>All calculators are for ILLUSTRATIVE purposes only. Do not expect returns to be identical to the results of the calculators on this website. You assume all risk by using this website. </p>
       <p>This website uses affiliate links, meaning that when you make a purchase, this website will recieve a little bit of the sale at no extra cost to you. The only page that features affiliate links is the books page. This money helps offset the cost of hosting and the domain names, and the developers time, and helps ensure you will recieve updates and more content. </p>
+      <p>By continuing to you agree to not hold the developer liable for any losses or damages that may occur from using this website.</p>
     </div>
   </div>
     <div class="container">
