stylesheets now are local instead of using cdn

--- a/credit-card-debt.html
+++ b/credit-card-debt.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Math Boxes Form with Spectre CSS</title>
-    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+<link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
     <style>
         /* Dark mode styles */
         body {
