--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The Freedom Savers Foundation</title>
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
+<link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre-icons.min.css">
 
   <style>
     /* Custom Styles */
@@ -165,7 +166,7 @@
 </div></div>
     <div id="popup-container" class="popup-container">
         <div class="popup-content">
-            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projects will be different than real returns. Consult with a fee only financial advisor.</p>
+            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projections will be different than real returns. Consult with a fee only financial advisor.</p>
         </div>
         <div class="popup-close" onclick="closePopup()">Close</div>
     </div>
