--- a/bimonthly-mortgage.html
+++ b/bimonthly-mortgage.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Bimonthly Mortgage Payment Calculator</title>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+<link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
+<link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre-icons.min.css">
     <style>
         body {
             text-align: center;
