--- a/life.html
+++ b/life.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Days and Weeks Left Calculator</title>
-  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+<link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
+<link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre-icons.min.css">
   <style>
     body {
       background-color: #2d2d2d;
