--- a/pomodoro.html
+++ b/pomodoro.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Pomodoro Timer</title>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+<link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
     <style>
         body {
             text-align: center;
