seperated the webpages into sections

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>The Freedom Savers Foundation</title>
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre-icons.min.css">
+<link rel="stylesheet" href="styles.css">
 
   <style>
     /* Custom Styles */
@@ -13,7 +14,9 @@
       background-color: #343a40; /* Dark background color */
       color: #f8f9fa; /* Light text color */
     }
-    
+
+
+
     .backdrop {
       /*background-color: #212529; *//* Dark backdrop background color */
       color: #f8f9fa; /* Light text color */
@@ -108,11 +111,12 @@
   
 <div class="container">
     <div class="content">
+    <h2>Personal Finance Calculators</h2>
+
   <div class="columns">
     <div class="column col-4">
       <h5><a href="credit-card-debt.html">Credit Card Debt Calculators</a></h5>
       <h5><a href="bimonthly-mortgage.html">Bimonthly Mortgage Caculator COMING SOON. Contribute code on our github.</a></h5>
-      <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
       <h5><a href="life.html">How many days or weeks do I have left to live? Calculator</a></h5>
       <h5><a href="retirement-calculator.html">Retirement or FI RE calculator COMING SOON. Contribute code on our github.</a></h5>
       <h5><a href="save-1-month-of-expenses.html">How long will it take for me to save 1 month of expenses? Calculator</a></h5>
@@ -126,7 +130,6 @@
       <h5><a href="books.html">Reccomended Books</a></h5>      
       <h5><a href="ira-vs-roth.html">Traditional IRA vs Roth Caclulator COMING SOON. Contribute code on our github.</a></h5>
       <h5>Roth Conversion Calculator COMING SOON. Contribute code on our github.</h5>
-      <h5><a href="one-rep-max.html">One Rep Max Calculator</a></h5>
     </div>
     <div class="column col-4">
       <h5>Real Estate vs Stocks Calculator COMING SOON. Contribute code on our github.</h5>
@@ -138,11 +141,49 @@
       <h5><a href="living-off-savings.html">How long can I live off my savings / investments?</a></h5>
 
     </div>
-
-
-      
   </div>
 </div></div>
+
+
+
+
+<div class="container">
+    <div class="content">
+    <h2>Productivity</h2>
+
+  <div class="columns">
+    <div class="column col-4">
+      <h5><a href="pomodoro.html">Pomodoro timer</a></h5>
+
+    </div>
+    <div class="column col-4">
+
+    </div>
+    <div class="column col-4">
+
+   </div>
+  </div>
+</div></div>
+
+
+<div class="container">
+    <div class="content">
+    <h2>Fitness</h2>
+
+  <div class="columns">
+    <div class="column col-4">
+      <h5><a href="one-rep-max.html">One Rep Max Calculator</a></h5>
+
+    </div>
+    <div class="column col-4">
+
+    </div>
+    <div class="column col-4">
+
+   </div>
+  </div>
+</div></div>
+
 
   <div class="container">
     <div class="content">
