new calc, how much money do I need to retire? rob bergers formula.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       <h5><a href="books.html">Reccomended Books</a></h5>      
       <h5><a href="ira-vs-roth.html">Traditional IRA vs Roth Caclulator COMING SOON. Contribute code on our github.</a></h5>
       <h5>Roth Conversion Calculator COMING SOON. Contribute code on our github.</h5>
+      <h5><a href="size-of-stash.html">How much money do I need to retire? </a></h5>
     </div>
     <div class="column col-4">
       <h5>Real Estate vs Stocks Calculator COMING SOON. Contribute code on our github.</h5>
