new inflation calc added and tested

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <h5><a href="reoccuring-expenses.html">Reoccuring expense calculator (rule of 752)</a></h5>
       <h5><a href="working-for-myself.html">How many hours per week do I work for myself?</a></h5>
       <h5><a href="savings-goal.html">Savings Goal Calculator, Down Payments, Appliances, Cars, College, Dream Goal, Any Large Purchase.</a></h5>
-      <h5>Inflation Calculator COMING SOON. Contribute code on our github.</h5>
+      <h5><a href="inflation.html">Inflation Calculator</a></h5>
       <h5>Compound interest calculator COMING SOON. Contribute code on our github.</h5>
       <h5><a href="living-off-savings.html">How long can I live off my savings / investments?</a></h5>
 
