--- a/size-of-stash.html
+++ b/size-of-stash.html
@@ -3,40 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Retirement Fund Calculator</title>
-<link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
-<link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre-icons.min.css">
+  <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
+  <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre-icons.min.css">
+  <link rel="stylesheet" href="non-inline-styles.css">
+  <link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
 
-
-<style>
-body {
-  background-color: #212529;
-  color: #fff;
-  padding: 20px;
-}
-
-.container {
-  max-width: 500px;
-  margin: 0 auto;
-}
-
-.form-group {
-  margin-bottom: 20px;
-}
-
-label {
-  display: block;
-}
-
-.btn-primary {
-  background-color: #007bff;
-}
-
-.result {
-  margin-top: 20px;
-  font-weight: bold;
-}
-
-</style>
 </head>
 <body>
   <div class="container">
@@ -50,6 +21,11 @@ label {
     <div class="form-group">
       <button id="calculate-btn" class="btn btn-primary">Calculate</button>
     </div>
+    <div class="form-group">
+            <h6><a href="index.html">Click here to go back to the home page</a></h6>
+        </div>
+        <div class="form-group">
+            <h6><a href="https://github.com/JeffreyDinackus/JeffreyDinackus.com">Click here to go back to submit an improvement</a></h6>        </div>
     <div class="result" id="result"></div>
   </div>
 
