--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   
 <div class="container">
     <div class="content">
-    <h2>Personal Finance Calculators</h2>
+    <h2>Personal Finance</h2>
 
   <div class="columns">
     <div class="column col-4">
