links now red for accessability

--- a/books.html
+++ b/books.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre-icons.min.css">
+<link rel="stylesheet" href="styles.css">
+
   <style>
     /* Custom styles for dark theme */
     body {
