--- a/credit-card-debt.html
+++ b/credit-card-debt.html
@@ -3,6 +3,8 @@
 <head>
     <title>Math Boxes Form with Spectre CSS</title>
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
+<link rel="stylesheet" href="styles.css">
+
     <style>
         /* Dark mode styles */
         body {
