--- a/bimonthly-mortgage.html
+++ b/bimonthly-mortgage.html
@@ -4,6 +4,8 @@
     <title>Bimonthly Mortgage Payment Calculator</title>
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre-icons.min.css">
+<link rel="stylesheet" href="styles.css">
+
     <style>
         body {
             text-align: center;
