--- a/inflation.html
+++ b/inflation.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre-icons.min.css">
   <link rel="stylesheet" href="non-inline-styles.css">
   <link rel="icon" type="image/x-icon" href="/Assets/Media/icon.android-chrome-192x192.png">
+<link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
