--- a/savings-goal.html
+++ b/savings-goal.html
@@ -3,6 +3,8 @@
 <head>
     <title>Saving Goal Calculator</title>
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
+<link rel="stylesheet" href="styles.css">
+
     <style>
         body {
             text-align: center;
