--- a/working-for-myself.html
+++ b/working-for-myself.html
@@ -3,6 +3,8 @@
 <head>
     <title>Work and Income Calculator</title>
 <link rel="stylesheet" href="/Assets/spectre-0.5.9/dist/spectre.min.css">
+<link rel="stylesheet" href="styles.css">
+
     <style>
         body {
             text-align: center;
