buttons now orange/red for consistancy

--- a/credit-card-debt.html
+++ b/credit-card-debt.html
@@ -208,7 +208,7 @@ function calculateSum(event) {
                 </tbody>
             </table>
                     <p>I am a fan of yours David Bach. I hope this calculator helps your readers.</p>
-            <button type="submit" class="btn btn-success">Get Result</button>
+            <button type="submit" class="btn btn-error">Get Result</button>
         <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
         </div>
