--- a/living-off-savings.html
+++ b/living-off-savings.html
@@ -59,7 +59,7 @@
             <label for="yearlyExpenses">Yearly Expenses:</label>
             <input type="number" id="yearlyExpenses" class="form-input" placeholder="Enter yearly expenses">
         </div>
-        <button id="calculateButton" class="btn btn-primary">Calculate</button>
+        <button id="calculateButton" class="btn btn-error">Calculate</button>
         <div id="result"></div>
                         <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
