--- a/pomodoro.html
+++ b/pomodoro.html
@@ -54,7 +54,7 @@
             <input type="number" id="inputTime" class="form-input" placeholder="Enter time">
         </div>
         <div class="form-group">
-            <button id="startButton" class="btn btn-primary">Start</button>
+            <button id="startButton" class="btn btn-error">Start</button>
             <button id="resetButton" class="btn">Reset</button>
         </div>
         <div class="form-group">
