--- a/reoccuring-expenses.html
+++ b/reoccuring-expenses.html
@@ -59,7 +59,7 @@
                 <!--<option value="1">Yearly (7% rate of return)</option>-->
             </select>
         </div>
-        <button id="calculateButton" class="btn btn-primary">Calculate</button>
+        <button id="calculateButton" class="btn btn-error">Calculate</button>
                         <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
         </div>
