--- a/size-of-stash.html
+++ b/size-of-stash.html
@@ -20,7 +20,7 @@
       <input type="number" id="yearly-expenses" step="any" placeholder="Enter yearly expenses">
     </div>
     <div class="form-group">
-      <button id="calculate-btn" class="btn btn-primary">Calculate</button>
+      <button id="calculate-btn" class="btn btn-error">Calculate</button>
     </div>
     <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
