--- a/financial-levels.html
+++ b/financial-levels.html
@@ -56,7 +56,7 @@
             <label class="form-label">Current Savings:</label>
             <input type="number" step="0.01" min="0" class="form-input" id="current-savings">
         </div>
-        <button class="btn btn-primary" onclick="calculate()">Calculate</button>
+        <button class="btn btn-error" onclick="calculate()">Calculate</button>
         <div id="result" class="result"></div>
                 <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
