--- a/life.html
+++ b/life.html
@@ -45,7 +45,7 @@
       background-color: #fff;
     }
 
-    .btn-primary {
+    .btn-error {
       display: inline-block;
       padding: 10px 20px;
       border-radius: 4px;
@@ -57,7 +57,7 @@
       transition: background-color 0.3s ease;
     }
 
-    .btn-primary:hover {
+    .btn-error:hover {
       background-color: #0056b3;
     }
 
@@ -97,7 +97,7 @@
         <input type="number" id="estimated-age" class="form-input">
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-primary">Calculate</button>
+        <button type="submit" class="btn btn-error">Calculate</button>
       </div>
     </form>
     <div id="result" class="result-container mt-3"></div>                <div class="form-group">
