--- a/retirement-calculator.html
+++ b/retirement-calculator.html
@@ -82,7 +82,7 @@
             <input type="number" id="inputFutureIncome" class="form-input" placeholder="Enter monthly income in retirement">
         </div>
         <div class="form-group">
-            <button id="calculateButton" class="btn btn-primary">Calculate</button>
+            <button id="calculateButton" class="btn btn-error">Calculate</button>
         </div>
                         <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
