--- a/savings-goal.html
+++ b/savings-goal.html
@@ -62,7 +62,7 @@
             <label for="timeFrame">Timeframe (in months):</label>
             <input type="number" id="timeFrame" class="form-input" placeholder="Enter timeframe in months">
         </div>
-        <button id="calculateButton" class="btn btn-primary">Calculate</button>
+        <button id="calculateButton" class="btn btn-error">Calculate</button>
                         <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
         </div>
