--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
   <div class="container">
     <div class="content">
-      <h2>About</h2>
+      <h2 id="about">About</h2>
       <p>This is a free and open source project. View code and contribute on our github page.</p>
       <p>All calculators are for ILLUSTRATIVE purposes only. Do not expect returns to be identical to the results of the calculators on this website. You assume all risk by using this website. </p>
       <p>This website uses affiliate links, meaning that when you make a purchase, this website will recieve a little bit of the sale at no extra cost to you. The only page that features affiliate links is the books page. This money helps offset the cost of hosting and the domain names, and the developers time, and helps ensure you will recieve updates and more content. </p>
@@ -209,7 +209,7 @@
 </div></div>
     <div id="popup-container" class="popup-container">
         <div class="popup-content">
-            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projections will be different than real returns. Consult with a fee only financial advisor.</p>
+            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projections will be different than real returns. Consult with a fee only financial advisor. By continuing to use this website, you agree to all disclaimers on our about page. <a href="#about">Take me there</a></p>
         </div>
         <div class="popup-close" onclick="closePopup()">Close</div>
     </div>
