--- a/pomodoro.html
+++ b/pomodoro.html
@@ -58,11 +58,11 @@
             <button id="resetButton" class="btn">Reset</button>
         </div>
         <div class="form-group">
-            <button id="workButton20" class="btn">20 Min Work</button>
-            <button id="workButton25" class="btn">25 Min Work</button>
-            <button id="breakButton5" class="btn">5 Min Break</button>
-            <button id="breakButton10" class="btn">10 Min Break</button>
-            <button id="breakButton15" class="btn">15 Min Break</button>
+            <button id="workButton20" class="btn btn-success">20 Min Work</button>
+            <button id="workButton25" class="btn btn-success">25 Min Work</button>
+            <button id="breakButton5" class="btn btn-success">5 Min Break</button>
+            <button id="breakButton10" class="btn btn-success">10 Min Break</button>
+            <button id="breakButton15" class="btn btn-success">15 Min Break</button>
             <button id="test" onclick="playSound()" class="btn">Test alarm sound</button>
         </div>
         <div class="form-group">
