--- a/pomodoro.html
+++ b/pomodoro.html
@@ -55,7 +55,7 @@
         </div>
         <div class="form-group">
             <button id="startButton" class="btn btn-error">Start</button>
-            <button id="resetButton" class="btn">Reset</button>
+            <button id="resetButton" class="btn btn-success">Reset</button>
         </div>
         <div class="form-group">
             <button id="workButton20" class="btn btn-success">20 Min Work</button>
@@ -63,7 +63,7 @@
             <button id="breakButton5" class="btn btn-success">5 Min Break</button>
             <button id="breakButton10" class="btn btn-success">10 Min Break</button>
             <button id="breakButton15" class="btn btn-success">15 Min Break</button>
-            <button id="test" onclick="playSound()" class="btn">Test alarm sound</button>
+            <button id="test" onclick="playSound()" class="btn btn-success">Test alarm sound</button>
         </div>
         <div class="form-group">
             <h6><a href="index.html">Click here to go back to the home page</a></h6>
