new BMI calculator added

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
 
     </div>
     <div class="column col-4">
+      <h5><a href="bmi.html">BMI &ndash; Body Mass Index Calculator</a></h5>
 
     </div>
     <div class="column col-4">
@@ -190,10 +191,10 @@
   <div class="container">
     <div class="content">
       <h2 id="about">About</h2>
-      <p>This is a free and open source project. View code and contribute on our github page.</p>
+      <p>This is a free and open source project. View code (including all formulas used!) and contribute on our github page.</p>
       <p>All calculators are for ILLUSTRATIVE purposes only. Do not expect returns to be identical to the results of the calculators on this website. You assume all risk by using this website. </p>
       <p>This website uses affiliate links, meaning that when you make a purchase, this website will recieve a little bit of the sale at no extra cost to you. The only page that features affiliate links is the books page. This money helps offset the cost of hosting and the domain names, and the developers time, and helps ensure you will recieve updates and more content. </p>
-      <p>By continuing to you agree to not hold the developer liable for any losses or damages that may occur from using this website.</p>
+      <p>By continuing to you agree to not hold any of the developers or the organization liable for any losses or damages that may occur from using this website. You agree to hold any developers and the organzation blameless. </p>
     </div>
   </div>
     <div class="container">
@@ -209,7 +210,7 @@
 </div></div>
     <div id="popup-container" class="popup-container">
         <div class="popup-content">
-            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projections will be different than real returns. Consult with a fee only financial advisor. By continuing to use this website, you agree to all disclaimers on our about page. <a href="#about">Take me there</a></p>
+            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projections will be different than real returns. Consult with a fee only financial advisor. By continuing to use this website, you agree to all terms on our about page. <a href="#about">Take me there</a></p>
         </div>
         <div class="popup-close" onclick="closePopup()">Close</div>
     </div>
