cookies notice added

--- a/books.html
+++ b/books.html
@@ -62,7 +62,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>Reccomended Readings on Personal Finance</h1>
+  <ul>
+    
+  <h1>Recommended Books</h1>
+  <li><a href="#finance-books">Personal Finance Books</a></li>
+  <li><a href="#prod-books">Productivity Books</a></li>
+  <li><a href="#fit-books">Fitness Books</a></li></ul>
+    <h1 id="finance-books">Reccomended Readings on Personal Finance</h1>
     <h6>It is best practice to read multiple books, this will both inform you and strengthen your resolve when it comes to saving, if you want to start with one, the Simple Path to Qealth and Retire Before Mom and Dad are good choices.</h6>
     <p>This page uses affiliate links, meaning that when you make a purchase, this website will recieve a little bit of the sale at no extra cost to you. The only page that features affiliate links is this page. This money helps offset the cost of hosting and the domain names, and helps ensure you will recieve updates and more content. </p>
 
@@ -119,13 +125,27 @@
         <p class="book-author">Rob Roy</p>
         <p class="book-edition">Edition: 2nd</p>
         <p>Dark horse book, reccomended for anyone. Best for the committed serious investor and is mostly a real estate book, not a traditional personal finance book. Buy a used copy on Amazon to save some bucks!</p>
-      </div></div>             
+      </div></div> <!--    <div class="book">
+      <a target="_blank" href="https://www.amazon.com/Bogleheads-Guide-Investing-Second/dp/B07VGDSDPB/ref=sr_1_1?keywords=bogleheads+guide+to+investing&amp;s=books&amp;sr=1-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=bb3c481b29c13ee74f077f5780d35991&camp=1789&creative=9325"><img class="book-image" src="/Assets/Media/book5.jpg" alt="Boglehead's guide to investing cover"></a>
+      <div class="book-details">
+        <h2 class="book-title"><a target="_blank" href="https://www.amazon.com/Bogleheads-Guide-Investing-Second/dp/B07VGDSDPB/ref=sr_1_1?keywords=bogleheads+guide+to+investing&amp;s=books&amp;sr=1-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=bb3c481b29c13ee74f077f5780d35991&camp=1789&creative=9325">Bogleheads Guide to Investing</h2></a>
+        <p class="book-author">Tyler Larimore, Mel</p>
+        <p class="book-edition">Edition: 2014</p>
+        <p>Very detailed book, but a little dry. I would not reccomend as a first book, as if you do not know a about personal finance and individual types of investments, you may feel lost as many things are covered quickly.</p>
+      </div>
+      
+    </div>-->            
       <div class="form-group">
         <h6><a href="index.html">Click here to go back to the home page</a></h6>
         </div>
     <!-- Add more book entries as needed -->
     <p class="disclaimer">Disclaimer: This page may contain affiliate links. By using these links, I may earn a commission at no additional cost to you. The funds raised help cover the cost of hosting, ssl certificates, domain names, and other costs.</p>
+  <div class="container">
+    <h1 id="prod-books">Reccomended Readings on Productivity</h1>
+    <p>This page uses affiliate links, meaning that when you make a purchase, this website will recieve a little bit of the sale at no extra cost to you. The only page that features affiliate links is this page. This money helps offset the cost of hosting and the domain names, and helps ensure you will recieve updates and more content. </p>
 
+
+  </div>
   </div>
 </body>
 </html>
