--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
       <p>All calculators are for ILLUSTRATIVE purposes only. Do not expect returns to be identical to the results of the calculators on this website. You assume all risk by using this website. </p>
       <p>This website uses affiliate links, meaning that when you make a purchase, this website will recieve a little bit of the sale at no extra cost to you. The only page that features affiliate links is the books page. This money helps offset the cost of hosting and the domain names, and the developers time, and helps ensure you will recieve updates and more content. </p>
       <p>By continuing to you agree to not hold any of the developers or the organization liable for any losses or damages that may occur from using this website. You agree to hold any developers and the organzation blameless. </p>
+      <p>This website uses cookies, however they are only used on the Pomodoro page. The cookies purpose is to save the time in the timer in case the browser crashes. No other cookies are used and the developer does not have access to them.</p>
     </div>
   </div>
     <div class="container">
