--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <h5><a href="retirement-calculator.html">Retirement or FI RE calculator COMING SOON. Contribute code on our github.</a></h5>
       <h5><a href="save-1-month-of-expenses.html">How long will it take for me to save 1 month of expenses? Calculator</a></h5>
       <h5>Credit card points vs cashback vs invested returns COMING SOON. Contribute code on our github.</h5>
-
+      <h5>Car miles per gallon cost comparison calculator</h5>
     </div>
     <div class="column col-4">
       <h5><a href="net-worth.html">Net Worth and Expense Ratio Calculator</a></h5>
@@ -132,6 +132,7 @@
       <h5><a href="ira-vs-roth.html">Traditional IRA vs Roth Caclulator COMING SOON. Contribute code on our github.</a></h5>
       <h5>Roth Conversion Calculator COMING SOON. Contribute code on our github.</h5>
       <h5><a href="size-of-stash.html">How much money do I need to retire? </a></h5>
+      <h5>Wedding cost calculator</h5>
     </div>
     <div class="column col-4">
       <h5>Real Estate vs Stocks Calculator COMING SOON. Contribute code on our github.</h5>
@@ -141,7 +142,6 @@
       <h5><a href="inflation.html">Inflation Calculator</a></h5>
       <h5>Compound interest calculator COMING SOON. Contribute code on our github.</h5>
       <h5><a href="living-off-savings.html">How long can I live off my savings / investments?</a></h5>
-
     </div>
   </div>
 </div></div>
@@ -187,6 +187,23 @@
   </div>
 </div></div>
 
+<div class="container">
+    <div class="content">
+    <h2>Technical Documentation on things besides technology</h2>
+
+  <div class="columns">
+    <div class="column col-4">
+      <h5><a href="#">Tomatoes COMING SOON</a></h5>
+
+    </div>
+    <div class="column col-4">
+
+    </div>
+    <div class="column col-4">
+
+   </div>
+  </div>
+</div></div>
 
   <div class="container">
     <div class="content">
@@ -211,7 +228,7 @@
 </div></div>
     <div id="popup-container" class="popup-container">
         <div class="popup-content">
-            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projections will be different than real returns. Consult with a fee only financial advisor. By continuing to use this website, you agree to all terms on our about page. <a href="#about">Take me there</a></p>
+            <p>This website involves financial calculations and projections. Please note that all calculations are estimates and subject to various factors and risks. Projections will be different than real returns. Consult with a fee only financial advisor. By continuing to use this website, you agree to all terms on our about page. <a href="#about">Take me there</a>. This website also uses cookies.</p>
         </div>
         <div class="popup-close" onclick="closePopup()">Close</div>
     </div>
