new book added to books page

--- a/books.html
+++ b/books.html
@@ -87,7 +87,7 @@
         <h2 class="book-title"><a target="_blank" href="https://www.amazon.com/Automatic-Millionaire-Expanded-Updated-Powerful/dp/0451499085/ref=sr_1_1?keywords=automatic+millionaire&amp;sr=8-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=81b1ab294c55a118b14d6c7bc311a370&camp=1789&creative=9325">The Automatic Millionaire</a></h2>
         <p class="book-author">David Bach</p>
         <p class="book-edition">Edition: 2016</p>
-        <p>This book is great! Making everything automatic when it comes to personal finance is a wonderful idea and perhaps the only one that will work for most people. Inspires action and makes it simple. The one thing I don't like is the way he breaks down asset allocation which is too complicated for most people. Listen to the other books about asset allocation, but besides that everything is great.</p>
+        <p>This book is mostly great! Making everything automatic when it comes to personal finance is a wonderful idea and perhaps the only one that will work for most people. Inspires action and makes it simple. Two things I don't like is the way he breaks down asset allocation which is too complicated for most people. Listen to the other books about asset allocation. One more significant criticsm is that one should live life on both sides of retirement, saving every cent can be a mistake if it mean missing out on life which is what will likely happen if you take the latte factor too far. Still a great book. </p>
       </div>
     </div>
     <div class="book">
@@ -100,6 +100,20 @@
       </div>
       
     </div>
+
+<div class="book">
+      <a target="_blank" href=""><img class="book-image" src="/Assets/Media/book7.jpg" alt="I will teach you to be rich by Ramit Sethi Cover"></a>
+      <div class="book-details">
+        <h2 class="book-title"><a target="_blank" href="">I Will Teach You to be Rich</a></h2>
+        <p class="book-author">Ramit Sethi</p>
+        <p class="book-edition">Edition: 2017</p>
+        <p>Handles many of the soft skills of money, like talking to customer service reps, psychology, and checking and savings accounts. This book is a must read.</p>
+      </div></div>
+
+
+
+
+
         <div class="book">
       <a target="_blank" href="https://www.amazon.com/Little-Book-Common-Sense-Investing/dp/0470102101/ref=tmm_hrd_swatch_0?_encoding=UTF8&amp;sr=1-2&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=70b05f8efe552aa00e40279189077f9a&camp=1789&creative=9325"><img class="book-image" src="/Assets/Media/book4.jpg" alt="Jack Bogle's Little Book on Common Sense Investing cover"></a>
       <div class="book-details">
@@ -124,7 +138,7 @@
         <h2 class="book-title"><a target="_blank" href="https://www.amazon.com/Mortgage-Free-Innovative-Strategies-Debt-Free/dp/1603580654/ref=sr_1_2?keywords=mortgage+free&amp;s=books&amp;sr=1-2&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=9ed301ec79205510857e9320a9595dad&camp=1789&creative=9325">Mortgage Free!</a></h2>
         <p class="book-author">Rob Roy</p>
         <p class="book-edition">Edition: 2nd</p>
-        <p>Dark horse book, reccomended for anyone. Best for the committed serious investor and is mostly a real estate book, not a traditional personal finance book. Buy a used copy on Amazon to save some bucks!</p>
+        <p>Dark horse book, reccomended for anyone. Best for the committed serious investor. Buy a used copy on Amazon to save some bucks!</p>
       </div></div> <!--    <div class="book">
       <a target="_blank" href="https://www.amazon.com/Bogleheads-Guide-Investing-Second/dp/B07VGDSDPB/ref=sr_1_1?keywords=bogleheads+guide+to+investing&amp;s=books&amp;sr=1-1&_encoding=UTF8&tag=jeffreydinack-20&linkCode=ur2&linkId=bb3c481b29c13ee74f077f5780d35991&camp=1789&creative=9325"><img class="book-image" src="/Assets/Media/book5.jpg" alt="Boglehead's guide to investing cover"></a>
       <div class="book-details">
